# apollo

./: CMakeLists.txt
include/apollo/: apollo.h  archetype.h  component.h  component_storage.h  observer.h  registry.h  system.h  view.h
include/apollo/command/: clear_command.h  command.h  command_buffer.h  destroy_command.h  remove_command.h
include/apollo/core/: common.h  type_traits.h
include/apollo/job/: job.h  job_handle.h  thread_pool.h
src/: CMakeLists.txt  apollo.cpp
test/: CMakeLists.txt  Test.cpp  mass.h  move_system.h  transform.h  velocity.h
